--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root { 
-  --background-black: #212529;
+  --background-bd: #212529;
   --color-white: #FFFFFF;
-  --color-light-blue: #90B8F8;
-  --background-green-lime: #77ff7c;
+  --color-black: #000000;
+  --background-green-lime: #00972d;
 }
 
 * {
@@ -13,16 +13,33 @@
 }
 
 body {
-  background-color: var(--background-black);
+  background-color: var(--background-bd);
   color: var(--color-white);
+}
+
+.grayMode {
+  background-color: var(--background-bd);
+  color: var(--color-white);
+}
+
+.blackMode {
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
+
+.whiteMode {
+  background-color: var(--color-white);
+  color: var(--color-black);
 }
 
 a {
   text-decoration: none;
-  color: var(--color-white);
+  color: var(--background-green-lime);
 }
 
-.material-icons-outlined.md-24 { font-size: 40px; }
+.material-icons-outlined.md-40 { font-size: 40px; }
+.material-icons-outlined.md-24 { font-size: 24px; }
+.material-icons-outlined.md-30 { font-size: 40px; }
 
 header {
   padding: 0 20px;
@@ -31,16 +48,13 @@ header {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.05);
   height: 60px;
+  font-size: 1em;
 }
 
 header .logo {
   display: flex;
   align-items: center;
   text-transform: uppercase;
-}
-
-header i {
-  font-size: 10px;
 }
 
 header i:hover {
@@ -51,13 +65,13 @@ header i:hover {
 header h5 {
   margin-left: 6px;
   margin-top: 3px;
+  font-size: 1em;
 }
 
 nav ul {
   display: flex;
   list-style: none;
   text-transform: uppercase;
-  font-size: 13.28px;
 }
 
 nav ul li {
@@ -103,6 +117,7 @@ nav ul li:hover {
   top: 50%;
   cursor: pointer;
   right: 10px;
+  z-index: 2;
 }
 
 .box-acessibility i {
@@ -122,6 +137,7 @@ nav ul li:hover {
 .motivation p, .crucials p {
   font-weight: 300;
   margin-top: 20px;
+  font-size: 1em;
 }
 
 .motivation a {
@@ -133,7 +149,119 @@ nav ul li:hover {
   margin-left: 20px;
 }
 
-@media all and (max-width: 590px) {
+
+p {
+  line-height: 1.6em;
+}
+
+/******* MENU ACESSÍVEL ****/
+nav.accessible_menu {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  background: #FFF;
+  color: #000;
+}
+
+.font-changer a {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+
+.contrast-changer ul a {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+a#blackMode {
+  background-color: #000;
+}
+
+a#grayMode {
+  background-color: #212529;
+  border-color: #212529;
+}
+
+div.line-crucials {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  flex-flow: wrap;
+}
+
+div.box {
+  background: rgba(255, 255, 255, 0.03 );
+  box-shadow: 0 1px 13px 0 rgba(57, 57, 59, 0.37);
+  border-radius: 10px;
+  padding: 20px;
+  width: 600px;
+  margin-left: 10px;
+  margin-top: 20px;
+  text-align: center;
+  height: 320px;
+  overflow-y: scroll;
+}
+
+div.box h4 {
+  font-size: 1.25em;
+  margin-bottom: 20px;
+}
+
+div.box h5 {
+  font-size: 1em;
+  margin-top: 10px;
+}
+
+div.box p {
+  font-size: 1em;
+  margin: 0;
+}
+
+.button-line {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.button {
+  background-color: var(--background-green-lime);
+  color: var(--color-white);
+  padding: 10px;
+  border-radius: 20px;
+  font-size: 0.9em;
+  font-weight: 300;
+}
+
+footer {
+  background: rgba(255, 255, 255, 0.03 );
+  box-shadow: 0 1px 13px 0 rgba(57, 57, 59, 0.37);
+
+  margin-top: 50px;
+  padding: 20px;
+  text-align: center;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 590px) {
+  .motivation, .crucials {
+    padding: 0 15px;
+  }
   .active {
     display: block;
   }
@@ -162,6 +290,16 @@ nav ul li:hover {
     display: block;
     position: absolute;
     right: 20px;
-    top: 23px;
+    top: 223px;
+  }
+
+  nav.accessible_menu {
+    flex-direction: column;
+    height: 200px;
+    padding: 10px 0;
+  }
+
+  div.box {
+    margin-left: 0;
   }
 }
