--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,8 @@ footer {
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 60px;
+    top: 260px;
+    background: var(--color-white);
     left: 0;
   }
 
